published at date for events

--- a/lib/gits_web/live/dashboard_live/event.html.heex
+++ b/lib/gits_web/live/dashboard_live/event.html.heex
@@ -1,11 +1,11 @@
 <div>
-  <.link navigate={~p"/accounts/#{@slug}/next/events"} class="text-sm flex gap-2 text-zinc-600">
+  <.link navigate={~p"/accounts/#{@slug}/events"} class="text-sm flex gap-2 text-zinc-600">
     <.icon name="hero-chevron-left-mini" />
     <span>Events</span>
   </.link>
 </div>
-<div class="flex flex-wrap gap-4">
-  <div class="aspect-[3/2] w-36 overflow-hidden rounded-xl bg-zinc-200"></div>
+<div class="flex flex-wrap items-center gap-2 md:gap-4">
+  <div class="aspect-[3/2] w-32 overflow-hidden rounded-xl bg-zinc-200"></div>
   <div class="grid grow gap-2">
     <div class="flex flex-wrap items-center gap-2">
       <h1 class="w-full text-xl font-semibold md:w-auto"><%= @title %></h1>
@@ -13,21 +13,20 @@
         Badge
       </span>
     </div>
-    <div class="flex flex-wrap items-center gap-2">
-      <span class="w-full grow text-sm text-zinc-500 md:w-auto">
-        May 20, 2024 at 10:30 PM &bull; Artistry JHB, Sandton Somewhere
-      </span>
-      <button class="min-w-20 rounded-xl bg-black p-4 text-sm font-medium text-white">
-        Publish
-      </button>
-
-      <button class="min-w-20 rounded-xl p-4 text-sm font-medium hover:bg-zinc-100">
-        Edit
-      </button>
-
-      <button class="min-w-20 rounded-xl p-4 text-sm font-medium text-rose-500 hover:bg-rose-100">
-        Delete
-      </button>
+    <div class="flex flex-wrap items-center gap-4">
+      <div class="w-full grow gap-2 text-sm text-zinc-500 md:w-auto">
+        <span>May 20, 2024 at 10:30 PM</span>
+        <span class="inline-flex px-0.5">&bull;</span>
+        <span>Artistry JHB, Sandton Somewhere</span>
+      </div>
     </div>
+  </div>
+  <div class="flex gap-4">
+    <button class="min-w-20 rounded-lg bg-zinc-700 px-4 py-3 text-sm font-medium text-white">
+      Publish
+    </button>
+    <button class="min-w-20 rounded-lg bg-zinc-50 px-4 py-3 text-sm font-medium">
+      Edit
+    </button>
   </div>
 </div>
