--- a/lib/gits_web/live/dashboard_live/events.html.heex
+++ b/lib/gits_web/live/dashboard_live/events.html.heex
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between gap-4">
+<div :if={false} class="flex items-center justify-between gap-4">
   <h1 class="text-xl font-semibold">Events</h1>
   <button
     class="rounded-xl bg-zinc-100 px-4 py-3 text-sm font-medium hover:bg-zinc-200"
@@ -7,6 +7,40 @@
     Create event
   </button>
 </div>
+
+<h1 class="text-xl font-semibold">Events</h1>
+<div class="flex items-center justify-between gap-4">
+  <div class="grow"></div>
+  <button
+    class="rounded-xl bg-zinc-100 px-4 py-3 text-sm font-medium hover:bg-zinc-200"
+    phx-click={JS.navigate(~p"/accounts/#{@slug}/events/new")}
+  >
+    Create event
+  </button>
+</div>
+
+<div class="grid gap-4 divide-y divide-zinc-100 md:gap-6">
+  <div :for={event <- @events} class="flex items-center gap-2 pt-4 md:gap-6 md:pt-6">
+    <div class="aspect-[3/2] w-32 shrink-0 overflow-hidden rounded-xl bg-zinc-200"></div>
+    <div class="line-clamp-3 grid grow gap-1 md:gap-2">
+      <h1 class="w-full text-base font-semibold md:w-auto">
+        <.link navigate={~p"/accounts/#{@slug}/events/#{event.id}"}><%= event.name %></.link>
+      </h1>
+      <div class="w-full grow gap-2 text-sm text-zinc-500 md:w-auto">
+        <span>May 20, 2024 at 10:30 PM</span>
+        <span class="inline-flex px-0.5">&bull;</span>
+        <span>Artistry JHB, Sandton Somewhere</span>
+      </div>
+      <span class="hidden text-sm text-zinc-500 md:inline-flex">0/1 tickets sold</span>
+    </div>
+    <div class="shrink-0">
+      <button class="flex rounded-lg p-1 hover:bg-zinc-50">
+        <.icon name="hero-ellipsis-vertical-mini" />
+      </button>
+    </div>
+  </div>
+</div>
+
 <div :if={false} class="space-y-2">
   <div class="grid-cols-[6fr_2fr_1fr_0.5fr] grid gap-2 pb-2 text-sm text-zinc-500 md:border-b md:border-zinc-100">
     <span class="col-span-full md:col-span-1">Member</span>
