--- a/lib/gits_web/controllers/page_html/events.html.heex
+++ b/lib/gits_web/controllers/page_html/events.html.heex
@@ -1,2 +1,10 @@
-No results
+<%= if FunWithFlags.enabled?(:events) do %>
+  <h1 class="text-xl font-semibold">Coming up</h1>
+  <div>
+    <.link :for={event <- @events} navigate={~p"/events/#{event.masked_id}"}>
+      <span><%= event.name %></span>
+    </.link>
+  </div>
+<% else %>
+<% end %>
 
