--- a/lib/gits_web/live/dashboard_live/event.html.heex
+++ b/lib/gits_web/live/dashboard_live/event.html.heex
@@ -34,12 +34,15 @@
 <div class="grid gap-4">
   <div class="flex items-center justify-between">
     <h3 class="font-semibold">Tickets</h3>
-    <button class="rounded-md p-2 px-4 text-sm font-medium hover:bg-zinc-100">
+    <button
+      phx-click={JS.patch(~p"/accounts/#{@slug}/events/#{@event.id}?ticket=new")}
+      class="rounded-md p-2 px-4 text-sm font-medium hover:bg-zinc-100"
+    >
       Add ticket
     </button>
   </div>
   <div class="grid gap-4 md:grid-cols-3 md:gap-6 lg:grid-cols-3 lg:gap-8">
-    <div :for={id <- ["General", "VIP", "VVIP"]} class="rounded-xl border border-zinc-200 p-2">
+    <div :for={ticket <- @event.tickets} class="rounded-xl border border-zinc-200 p-2">
       <div class="flex w-full items-center justify-between">
         <span class="p-2 px-4 text-sm font-medium text-zinc-500">10 Jun, 2024</span>
         <button class="inline-flex rounded-lg p-2 hover:bg-zinc-100">
@@ -47,12 +50,55 @@
         </button>
       </div>
       <div class="p-2 px-4">
-        <h3 class="text-xl font-medium"><%= id %></h3>
+        <h3 class="text-xl font-medium"><%= ticket.name %></h3>
       </div>
       <div class="flex p-2 px-4">
         <span class="grow text-xs text-zinc-500">0/10 tickets sold</span>
         <span class="text-xs text-zinc-500">R 100</span>
       </div>
     </div>
+  </div>
+</div>
+
+<div
+  :if={@manage_ticket_form}
+  class="!m-0 bg-zinc-500/50 fixed inset-0 z-20 flex justify-end transition-all"
+>
+  <div class="flex h-full w-full max-w-xl gap-4 md:p-4">
+    <.simple_form
+      :let={f}
+      for={@manage_ticket_form}
+      phx-submit="submit"
+      class="flex gap-8 w-full flex-col bg-white overflow-auto p-4 md:rounded-2xl md:px-8 md:py-6"
+    >
+      <h1 class="text-xl font-semibold">
+        <%= @manage_ticket_title %>
+      </h1>
+
+      <div class="grid grow grid-cols-2 content-start gap-4">
+        <.input field={f[:name]} label="Name" class="col-span-full" />
+        <.input field={f[:price]} label="Price" type="number" class="col-span-full" />
+        <.input field={f[:allowed_quantity_per_user]} label="Limit per customer" type="number" />
+        <.input field={f[:total_quantity]} label="Total ticket quantity" type="number" />
+        <.input field={f[:sale_starts_at]} label="Sale starts at" type="datetime-local" />
+        <.input field={f[:sale_ends_at]} label="Sale starts at" type="datetime-local" />
+        <.radio_group label="Availability" field={f[:available]} class="col-span-full">
+          <:radio value={:open}>Open</:radio>
+          <:radio value={:restricted}>Restricted</:radio>
+        </.radio_group>
+      </div>
+      <div class="grid grid-cols-2 gap-4 bg-white md:gap-8">
+        <button class="rounded-lg bg-zinc-800 px-4 py-3 text-sm font-medium text-white">
+          Save
+        </button>
+        <button
+          class="rounded-lg bg-zinc-50 px-4 py-3 text-sm font-medium"
+          type="button"
+          phx-click={JS.patch(~p"/accounts/#{@slug}/events/#{@event.id}")}
+        >
+          Cancel
+        </button>
+      </div>
+    </.simple_form>
   </div>
 </div>
