creating and deleting tickets

--- a/lib/gits_web/live/dashboard_live/event.html.heex
+++ b/lib/gits_web/live/dashboard_live/event.html.heex
@@ -45,16 +45,102 @@
     <div :for={ticket <- @event.tickets} class="rounded-xl border border-zinc-200 p-2">
       <div class="flex w-full items-center justify-between">
         <span class="p-2 px-4 text-sm font-medium text-zinc-500">10 Jun, 2024</span>
-        <button class="inline-flex rounded-lg p-2 hover:bg-zinc-100">
-          <.icon name="hero-ellipsis-vertical-mini" />
-        </button>
+        <div
+          id={"ticket-#{ticket.id}"}
+          phx-hook="Dropdown"
+          phx-click-away={
+            JS.hide(
+              to: "#ticket-#{ticket.id}>div[data-dropdown]",
+              transition:
+                {"transition ease-in duration-75", "transform opacity-100 scale-100",
+                 "transform opacity-0 scale-95"}
+            )
+          }
+        >
+          <button
+            class="inline-flex rounded-lg p-2 hover:bg-zinc-100"
+            phx-click={
+              JS.toggle(
+                to: "#ticket-#{ticket.id}>div[data-dropdown]",
+                in:
+                  {"transition duration-100 ease-out", "transform opacity-0 scale-95",
+                   "transform opacity-100 scale-100"},
+                out:
+                  {"transition ease-in duration-75", "transform opacity-100 scale-100",
+                   "transform opacity-0 scale-95"}
+              )
+            }
+            data-dropdown
+          >
+            <.icon name="hero-ellipsis-vertical-mini" />
+          </button>
+          <div
+            class="absolute top-0 left-0 z-10 hidden max-w-max divide-y divide-gray-100 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+            role="menu"
+            aria-orientation="vertical"
+            aria-labelledby="menu-button"
+            tabindex="-1"
+            data-dropdown
+            phx-click={
+              JS.hide(
+                to: "#ticket-#{ticket.id}>div[data-dropdown]",
+                transition:
+                  {"transition ease-in duration-75", "transform opacity-100 scale-100",
+                   "transform opacity-0 scale-95"}
+              )
+            }
+          >
+            <div class="w-56 py-1" role="none">
+              <button
+                class="flex w-full items-center gap-4 px-4 py-2 text-left text-sm text-gray-700 hover:bg-zinc-100 hover:text-zinc-900"
+                role="menuitem"
+                tabindex="-1"
+                id="menu-item-0"
+                phx-click={
+                  JS.hide(
+                    to: "#invite-dropdown-#{ticket.id}>div[data-dropdown]",
+                    transition:
+                      {"transition ease-in duration-75", "transform opacity-100 scale-100",
+                       "transform opacity-0 scale-95"}
+                  )
+                  |> JS.push("resend_invite")
+                }
+                phx-value-id={ticket.id}
+              >
+                <.icon name="hero-pencil-square-mini" /> Edit
+              </button>
+            </div>
+
+            <div class="w-56 py-1" role="none">
+              <a
+                href="#"
+                class="flex items-center gap-4 px-4 py-2 text-sm text-rose-600 hover:bg-rose-100 hover:text-rose-900"
+                role="menuitem"
+                tabindex="-1"
+                id="menu-item-1"
+                phx-click={
+                  JS.hide(
+                    to: "#ticket-#{ticket.id}>div[data-dropdown]",
+                    transition:
+                      {"transition ease-in duration-75", "transform opacity-100 scale-100",
+                       "transform opacity-0 scale-95"}
+                  )
+                  |> JS.push("delete_ticket")
+                }
+                phx-value-id={ticket.id}
+              >
+                <.icon name="hero-trash-mini" /> Delete
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="p-2 px-4">
         <h3 class="text-xl font-medium"><%= ticket.name %></h3>
       </div>
       <div class="flex p-2 px-4">
         <span class="grow text-xs text-zinc-500">0/10 tickets sold</span>
-        <span class="text-xs text-zinc-500">R 100</span>
+        <span class="text-xs text-zinc-500">R <%= ticket.price |> Gits.Currency.format() %></span>
       </div>
     </div>
   </div>
