--- a/lib/gits_web/live/dashboard_live/settings.html.heex
+++ b/lib/gits_web/live/dashboard_live/settings.html.heex
@@ -1,13 +1,38 @@
-<h1 class="mx-auto max-w-screen-lg text-xl font-semibold">Settings</h1>
-<h2 class="mx-auto max-w-screen-lg text-3xl">Payment providers</h2>
-<div class="mx-auto grid max-w-screen-lg gap-4 md:grid-cols-2 md:gap-8">
-  <div class="flex flex-wrap justify-between gap-6 rounded-xl border p-4">
-    <h3 class="font-semibold">Paystack</h3>
-    <div><button phx-click="show_paystack_form" class="text-sm">Setup</button></div>
+<h1 class="mx-auto max-w-screen-md text-xl font-semibold">Settings</h1>
+<h2 class="mx-auto max-w-screen-md text-xl">Accepting payments</h2>
+<div class="mx-auto flex max-w-screen-md flex-wrap items-center justify-between gap-2 rounded-xl border p-4">
+  <h3 class="font-semibold">Paystack</h3>
+  <%= if @account.paystack_ready do %>
+    <span>&bull;</span>
+    <span class="grow text-sm text-zinc-500">Ready for payments</span>
+  <% end %>
+  <div>
+    <button
+      type="button"
+      phx-click="show_paystack_form"
+      class="flex items-center gap-2 rounded-md px-3 py-2 text-sm font-medium hover:bg-zinc-100"
+    >
+      <.icon name="hero-pencil-square-mini" />
+      <span>Edit</span>
+    </button>
   </div>
-  <div class="flex justify-between gap-6 rounded-xl border p-4">
-    <h3 class="font-semibold">Payfast</h3>
-    <div><button class="text-sm">Setup</button></div>
+</div>
+
+<div class="mx-auto flex max-w-screen-md flex-wrap items-center justify-between gap-2 rounded-xl border p-4">
+  <h3 class="font-semibold">Payfast</h3>
+  <%= if @account.payfast_ready do %>
+    <span>&bull;</span>
+    <span class="grow text-sm text-zinc-500">Ready for payments</span>
+  <% end %>
+  <div>
+    <button
+      type="button"
+      phx-click="show_payfast_form"
+      class="flex items-center gap-2 rounded-md px-3 py-2 text-sm font-medium hover:bg-zinc-100"
+    >
+      <.icon name="hero-pencil-square-mini" />
+      <span>Edit</span>
+    </button>
   </div>
 </div>
 
