mock up designs for tickets

--- a/lib/gits_web/controllers/account_html/new.html.heex
+++ b/lib/gits_web/controllers/account_html/new.html.heex
@@ -7,7 +7,7 @@
 >
   <.input type="text" label="What's the name of your organization?" field={f[:name]} />
   <div>
-    <button class="rounded-lg bg-zinc-900 p-3 px-4 font-medium text-white">
+    <button class="rounded-lg bg-zinc-900 px-4 py-3 text-sm font-medium text-white">
       Create organization
     </button>
   </div>
