--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<.header signed_in={not is_nil(@current_user)} />
+<.header user={@current_user} />
 <div class="min-h-[calc(100dvh-theme(space.40))] mx-auto flex w-full max-w-screen-xl grow flex-col justify-center gap-10 rounded-lg bg-white">
   <%= @inner_content %>
 </div>
