--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -1,5 +1,13 @@
-<!-- <div class="fixed inset-0 bg-zinc-50" role="none"></div> -->
-<div class="sticky top-0 z-10 space-y-8 px-2 pb-2">
+<div :if={false} class="min-h-dvh sticky top-0 z-10 mx-auto max-w-screen-sm bg-zinc-50 px-2 pb-2">
+  <div class="flex items-center justify-between p-4">
+    <.link replace={true} navigate={~p"/my/tickets"} class="flex rounded-lg hover:bg-zinc-100 p-2">
+      <.icon name="hero-arrow-left-mini" />
+    </.link>
+    <span class="font-semibold">General</span>
+    <.link navigate={~p"/my/tickets"} class="flex rounded-lg hover:bg-zinc-100 p-2">
+      <.icon name="hero-ellipsis-horizontal-mini" />
+    </.link>
+  </div>
   <div class="size-80 sticky top-2 -z-10 mx-auto flex max-w-sm justify-center">
     <%= raw(
       "Hello this is a test for a very very long code"
@@ -14,64 +22,86 @@
     ) %>
   </div>
 
-  <div class="z-20 mx-auto grid max-w-screen-2xl gap-4 rounded-xl bg-white p-6 shadow *:grid md:p-12">
-    <div>
-      <span class="text-sm text-zinc-500">Ticket</span>
-      <span class="font-semibold">General</span>
+  <div class="z-20 mx-auto mt-8 grid max-w-screen-2xl grid-cols-2 gap-x-16 gap-y-6 rounded-xl bg-white p-6 text-sm shadow *:grid *:gap-2">
+    <div class="col-span-full">
+      <h1 class="col-span-full text-xl font-medium">The Ultimate Cheese Festival</h1>
     </div>
-    <div>
-      <span class="text-sm text-zinc-500">Event</span>
-      <span class="font-semibold">The Ultimate Cheese Festival</span>
+    <div class="">
+      <span class="text-sm text-zinc-500">Date</span>
+      <span class="font-semibold">Wed, 24 Dec 2024</span>
     </div>
-    <div>
-      <span class="text-sm text-zinc-500">Date and Time</span>
-      <span class="font-semibold">Monday, Dec 24 &bull; 06:00 PM</span>
+    <div class="">
+      <span class="text-sm text-zinc-500">Time</span>
+      <span class="font-semibold">06:00 PM</span>
     </div>
-    <div>
+    <div class="col-span-full">
       <span class="text-sm text-zinc-500">Event Location</span>
       <span class="font-semibold">Argistry JHB</span>
     </div>
-    <div>
-      <span class="text-sm text-zinc-500">Hosted by</span>
-      <span class="font-semibold">Treehouse Inc</span>
-    </div>
-    <!-- <div class="mx-auto grid max-w-xs justify-items-center py-8"> -->
-    <!--   <span class="w-full px-4 pb-2 text-xl font-semibold text-zinc-700"> -->
-    <!--     The Ultimate Cheese Festival. Season finalle -->
-    <!--   </span> -->
-    <!--   <span class="w-full px-4 text-xs font-medium">#001</span> -->
-    <!--   <div class="w-full max-w-sm py-6"> -->
-    <!--     <div class="grid-cols-[3fr_2fr] grid gap-4 gap-y-6 rounded-lg border p-4 text-sm"> -->
-    <!--       <div class="space-y-2 *:block"> -->
-    <!--         <span class="text-zinc-500">Date</span> -->
-    <!--         <span class="font-medium">26th October 2024</span> -->
-    <!--       </div> -->
-    <!--       <div class="space-y-2 *:block"> -->
-    <!--         <span class="text-zinc-500">Time</span> -->
-    <!--         <span class="font-medium">10:00 PM</span> -->
-    <!--       </div> -->
-    <!--       <div class="space-y-2 *:block"> -->
-    <!--         <span class="text-zinc-500">Venue</span> -->
-    <!--         <span class="font-medium"> -->
-    <!--           Artistry JHB, 22 Fredman Dr, Sandown, Sandton -->
-    <!--         </span> -->
-    <!--       </div> -->
-    <!--       <div class="space-y-2 *:block"> -->
-    <!--         <span class="text-zinc-500">Admit</span> -->
-    <!--         <span class="font-medium">General</span> -->
-    <!--       </div> -->
-    <!--     </div> -->
-    <!--   </div> -->
-    <!-- </div> -->
   </div>
+</div>
 
-  <div class="z-20 mx-auto grid max-w-screen-2xl gap-4 rounded-xl bg-white p-6 shadow *:flex *:justify-between md:p-12">
-    <div>
-      <span class="text-sm text-zinc-500">Display name</span>
-      <span class="text-sm font-semibold">Sdu</span>
+<div class="min-h-dvh sticky top-0 z-10 mx-auto max-w-screen-sm space-y-8 bg-zinc-50">
+  <div class="flex items-center justify-between bg-white p-4">
+    <.link navigate={~p"/my/tickets"} replace={true} class="flex rounded-lg hover:bg-zinc-100 p-2">
+      <.icon name="hero-arrow-left-mini" />
+    </.link>
+    <h1 class="font-semibold">General</h1>
+    <.link navigate={~p"/my/tickets"} class="flex rounded-lg hover:bg-zinc-100 p-2">
+      <.icon name="hero-ellipsis-horizontal-mini" />
+    </.link>
+  </div>
+  <div>
+    <div class="grid items-center gap-0.5 *:mx-auto *:flex *:w-80 *:gap-4 *:rounded-xl *:p-6 *:shadow-sm">
+      <div class="bg-white">
+        <div class="aspect-[4/5] h-20 rounded-lg bg-zinc-200 p-4"></div>
+        <div class="grid gap-2">
+          <h2 class="line-clamp-2 text-lg font-semibold">
+            The Ultimate Cheese Festival Cheezy Returns
+          </h2>
+          <div class="flex justify-between text-zinc-500">
+            <span class="flex items-center gap-1 text-xs">
+              <.icon name="hero-calendar-days-micro" /> 20 Mar 2024
+            </span>
+
+            <span class="flex items-center gap-1 text-xs">
+              <.icon name="hero-clock-micro" /> 20:00 PM
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="flex items-center bg-white">
+        <div class="size-64 mx-auto flex max-w-sm justify-center">
+          <%= raw(
+            "Hello this is a test for a very very long code"
+            |> EQRCode.encode()
+            |> EQRCode.svg(
+              viewbox: true,
+              shape: "circle",
+              color: "#3f3f46",
+              background_color: :transparent,
+              width: 256
+            )
+          ) %>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="sticky bottom-2 z-20 mx-auto grid max-w-screen-2xl gap-4 rounded-xl bg-white p-4 shadow *:grid md:p-12">
+  <div class="max-w-80 mx-auto rounded-xl bg-blue-50 p-4">
+    <div class="flex">
+      <div class="flex-shrink-0">
+        <.icon name="hero-information-circle-mini" class="bg-blue-500" />
+      </div>
+      <div class="ml-3 flex-1 md:flex md:justify-between">
+        <p class="text-sm text-blue-700">
+          A new software update is available. See what’s new in version 2.0.4.
+        </p>
+        <p class="mt-3 text-sm md:mt-0 md:ml-6">
+          <a href="#" class="whitespace-nowrap font-medium text-blue-700 hover:text-blue-600">
+            Details <span aria-hidden="true"> &rarr;</span>
+          </a>
+        </p>
+      </div>
+    </div>
   </div>
 </div>
