--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -8,7 +8,7 @@
       <.icon name="hero-ellipsis-horizontal-mini" />
     </.link>
   </div>
-  <div class="grid grid-cols-2 gap-2 bg-white p-2 text-center *:rounded-xl *:p-3 first:*:bg-zinc-50">
+  <div class="grid grid-cols-2 gap-2 bg-white p-2 text-center shadow-sm *:rounded-xl *:p-3 first:*:bg-zinc-50">
     <span class="text-sm">Upcoming</span>
     <span class="text-sm">Past tickets</span>
   </div>
