--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -1,54 +1,11 @@
-<div :if={false} class="min-h-dvh sticky top-0 z-10 mx-auto max-w-screen-sm bg-zinc-50 px-2 pb-2">
-  <div class="flex items-center justify-between p-4">
-    <.link replace={true} navigate={~p"/my/tickets"} class="flex rounded-lg hover:bg-zinc-100 p-2">
-      <.icon name="hero-arrow-left-mini" />
-    </.link>
-    <span class="font-semibold">General</span>
-    <.link navigate={~p"/my/tickets"} class="flex rounded-lg hover:bg-zinc-100 p-2">
-      <.icon name="hero-ellipsis-horizontal-mini" />
-    </.link>
-  </div>
-  <div class="size-80 sticky top-2 -z-10 mx-auto flex max-w-sm justify-center">
-    <%= raw(
-      "Hello this is a test for a very very long code"
-      |> EQRCode.encode()
-      |> EQRCode.svg(
-        viewbox: true,
-        shape: "circle",
-        color: "#3f3f46",
-        background_color: :transparent,
-        width: 320
-      )
-    ) %>
-  </div>
-
-  <div class="z-20 mx-auto mt-8 grid max-w-screen-2xl grid-cols-2 gap-x-16 gap-y-6 rounded-xl bg-white p-6 text-sm shadow *:grid *:gap-2">
-    <div class="col-span-full">
-      <h1 class="col-span-full text-xl font-medium">The Ultimate Cheese Festival</h1>
-    </div>
-    <div class="">
-      <span class="text-sm text-zinc-500">Date</span>
-      <span class="font-semibold">Wed, 24 Dec 2024</span>
-    </div>
-    <div class="">
-      <span class="text-sm text-zinc-500">Time</span>
-      <span class="font-semibold">06:00 PM</span>
-    </div>
-    <div class="col-span-full">
-      <span class="text-sm text-zinc-500">Event Location</span>
-      <span class="font-semibold">Argistry JHB</span>
-    </div>
-  </div>
-</div>
-
 <div class="min-h-dvh sticky top-0 z-10 mx-auto max-w-screen-sm space-y-8 bg-zinc-50">
   <div class="flex items-center justify-between bg-white p-4">
     <.link navigate={~p"/my/tickets"} replace={true} class="flex rounded-lg hover:bg-zinc-100 p-2">
       <.icon name="hero-arrow-left-mini" />
     </.link>
-    <h1 class="font-semibold">General</h1>
-    <.link navigate={~p"/my/tickets"} class="flex rounded-lg hover:bg-zinc-100 p-2">
-      <.icon name="hero-ellipsis-horizontal-mini" />
+    <h1 class="font-semibold"><%= @instance.ticket_name %></h1>
+    <.link class="flex rounded-lg hover:bg-zinc-100 p-2">
+      <!-- <.icon name="hero-ellipsis-horizontal-mini" /> -->
     </.link>
   </div>
   <div>
@@ -57,15 +14,17 @@
         <div class="aspect-[4/5] h-20 rounded-lg bg-zinc-200 p-4"></div>
         <div class="grid gap-2">
           <h2 class="line-clamp-2 text-lg font-semibold">
-            The Ultimate Cheese Festival Cheezy Returns
+            <%= @instance.event_name %>
           </h2>
           <div class="flex justify-between text-zinc-500">
             <span class="flex items-center gap-1 text-xs">
-              <.icon name="hero-calendar-days-micro" /> 20 Mar 2024
+              <.icon name="hero-calendar-days-micro" />
+              <%= @instance.event_starts_at |> Timex.format!("%e %b %Y", :strftime) %>
             </span>
 
             <span class="flex items-center gap-1 text-xs">
-              <.icon name="hero-clock-micro" /> 20:00 PM
+              <.icon name="hero-clock-micro" />
+              <%= @instance.event_starts_at |> Timex.format!("%H:%M %p", :strftime) %>
             </span>
           </div>
         </div>
@@ -94,9 +53,9 @@
       </div>
       <div class="ml-3 flex-1 md:flex md:justify-between">
         <p class="text-sm text-blue-700">
-          A new software update is available. See what’s new in version 2.0.4.
+          Present this ticket at the event for access
         </p>
-        <p class="mt-3 text-sm md:mt-0 md:ml-6">
+        <p :if={false} class="mt-3 text-sm md:mt-0 md:ml-6">
           <a href="#" class="whitespace-nowrap font-medium text-blue-700 hover:text-blue-600">
             Details <span aria-hidden="true"> &rarr;</span>
           </a>
