--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -4,20 +4,16 @@
       <.icon name="hero-arrow-left-mini" />
     </.link>
     <h1 class="font-semibold">Tickets</h1>
-    <.link navigate={~p"/my/tickets"} class="flex rounded-lg hover:bg-zinc-100 p-2">
-      <.icon name="hero-ellipsis-horizontal-mini" />
+    <.link class="flex rounded-lg hover:bg-zinc-100 p-2">
+      <!-- <.icon name="hero-ellipsis-horizontal-mini" /> -->
     </.link>
   </div>
   <div class="grid grid-cols-2 gap-2 bg-white p-2 text-center shadow-sm *:rounded-xl *:p-3 first:*:bg-zinc-50">
     <span class="text-sm">Upcoming</span>
     <span class="text-sm">Past tickets</span>
   </div>
-  <div>
-    <div class="grid items-center gap-0.5 pt-8 *:mx-auto *:flex *:w-72 *:gap-4 *:rounded-xl *:bg-white *:p-4 *:shadow-sm">
-    </div>
-  </div>
   <swiper-container
-    class="mt-2"
+    class="mt-2 pt-8"
     effect="coverflow"
     grab-cursor="true"
     centered-slides="true"
@@ -25,16 +21,15 @@
     coverflow-effect-rotate="45"
     coverflow-effect-stretch="0"
     coverflow-effect-depth="100"
-    coverflow-effect-modifier="1"
     coverflow-effect-shadows="true"
   >
     <swiper-slide
       :for={instance <- @instances}
       class="grid w-72 gap-0.5 overflow-hidden rounded-xl"
     >
-      <div class="flex-wrap rounded-xl bg-white p-4 shadow-sm">
+      <div class="flex flex-wrap gap-4 rounded-xl bg-white p-4 shadow-sm">
         <div class="aspect-[3/2] w-full rounded-lg bg-zinc-200 p-4"></div>
-        <h2 class="text-lg font-semibold">The Ultimate Cheese Festival</h2>
+        <h2 class="text-lg font-semibold"><%= instance.event_name %></h2>
         <div class="w-full">
           <div class="flex w-full justify-between text-xs font-medium text-zinc-500">
             <span>Name</span>
@@ -42,7 +37,7 @@
           </div>
           <div class="flex w-full justify-between text-sm font-medium">
             <span><%= @current_user.display_name %></span>
-            <span>General</span>
+            <span><%= instance.ticket_name %></span>
           </div>
         </div>
 
@@ -52,11 +47,16 @@
             <span>Date</span>
           </div>
           <div class="flex w-full justify-between text-sm font-medium">
-            <span>09:00 PM</span>
-            <span>Wednesday, 04 Dec 2024</span>
+            <span>
+              <%= instance.event_starts_at |> Timex.format!("%H:%M %p", :strftime) %>
+            </span>
+            <span>
+              <%= instance.event_starts_at
+              |> Timex.format!("%A, %e %b %Y", :strftime) %>
+            </span>
           </div>
         </div>
-        <div class="w-full">
+        <div :if={false} class="w-full">
           <div class="flex w-full justify-between text-xs font-medium text-zinc-500">
             <span>Place</span>
           </div>
@@ -70,11 +70,11 @@
         <span class="grow text-xl">#<%= instance.id %></span>
         <button
           class="flex rounded-md p-1 ring-1 ring-zinc-400 hover:bg-zinc-100"
-          phx-click={JS.navigate("/my/tickets/1")}
+          phx-click={JS.navigate(~p"/my/tickets/#{instance.id}")}
         >
           <.icon name="hero-qr-code" />
         </button>
-        <button class="flex rounded-md p-1 hover:bg-zinc-100">
+        <button :if={false} class="flex rounded-md p-1 hover:bg-zinc-100">
           <.icon name="hero-ellipsis-vertical-mini" />
         </button>
       </div>
