--- a/lib/gits_web/components/layouts/dashboard.html.heex
+++ b/lib/gits_web/components/layouts/dashboard.html.heex
@@ -83,6 +83,7 @@
           }
         >
           <.link :for={option <- @context_options} navigate={~p"/accounts/#{@slug}"}>
+            <.icon name={option.icon} />
             <span><%= option.label %></span>
           </.link>
         </div>
