--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -9,8 +9,8 @@
     </.link>
   </div>
   <div>
-    <div class="grid items-center gap-0.5 *:mx-auto *:flex *:w-80 *:gap-4 *:rounded-xl *:p-6 *:shadow-sm">
-      <div class="bg-white">
+    <div class="grid items-center gap-0.5">
+      <div class="mx-auto flex w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
         <div class="aspect-[4/5] h-20 rounded-lg bg-zinc-200 p-4"></div>
         <div class="grid gap-2">
           <h2 class="line-clamp-2 text-lg font-semibold">
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-      <div class="flex items-center bg-white">
+      <div class="mx-auto flex grid w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
         <div class="size-64 mx-auto flex max-w-sm justify-center">
           <%= raw(
             "Hello this is a test for a very very long code"
@@ -43,23 +43,26 @@
             )
           ) %>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="max-w-80 mx-auto rounded-xl bg-blue-50 p-4">
-    <div class="flex">
-      <div class="flex-shrink-0">
-        <.icon name="hero-information-circle-mini" class="bg-blue-500" />
-      </div>
-      <div class="ml-3 flex-1 md:flex md:justify-between">
-        <p class="text-sm text-blue-700">
-          Present this ticket at the event for access
-        </p>
-        <p :if={false} class="mt-3 text-sm md:mt-0 md:ml-6">
-          <a href="#" class="whitespace-nowrap font-medium text-blue-700 hover:text-blue-600">
-            Details <span aria-hidden="true"> &rarr;</span>
-          </a>
-        </p>
+        <div :if={true} class="max-w-80 mx-auto rounded-xl bg-blue-50 p-4">
+          <div class="flex">
+            <div class="flex-shrink-0">
+              <.icon name="hero-information-circle-mini" class="bg-blue-500" />
+            </div>
+            <div class="ml-3 flex-1 md:flex md:justify-between">
+              <p class="text-sm text-blue-700">
+                Present this ticket at the event for access
+              </p>
+              <p :if={false} class="mt-3 text-sm md:mt-0 md:ml-6">
+                <a
+                  href="#"
+                  class="whitespace-nowrap font-medium text-blue-700 hover:text-blue-600"
+                >
+                  Details <span aria-hidden="true"> &rarr;</span>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
