--- a/lib/gits_web/components/layouts/dashboard.html.heex
+++ b/lib/gits_web/components/layouts/dashboard.html.heex
@@ -51,28 +51,28 @@
         </div>
       </div>
       <div
-        class="mt-4 grid gap-2 border-t pt-4 text-base font-medium *:flex *:items-center *:gap-3 *:rounded-lg *:p-2 *:text-zinc-500 hover:*:bg-zinc-50 lg:hover:*:bg-zinc-100"
+        class="mt-4 grid gap-2 border-t pt-4 text-sm font-medium *:flex *:items-center *:gap-3 *:rounded-lg *:p-2 *:text-zinc-500 hover:*:bg-zinc-50 lg:hover:*:bg-zinc-100"
         phx-click={
           JS.remove_class("translate-x-72", to: "#sidebar")
           |> JS.add_class("hidden", to: "#backdrop")
         }
       >
         <.link navigate={~p"/accounts/#{@slug}"}>
-          <.icon name="hero-home-solid" />
+          <.icon name="hero-home-mini" />
           <span>Home</span>
         </.link>
         <.link navigate={~p"/accounts/#{@slug}/events"}>
-          <.icon name="hero-calendar-days-solid" />
+          <.icon name="hero-calendar-days-mini" />
           <span>Events</span>
         </.link>
         <.link navigate={~p"/accounts/#{@slug}/team"}>
-          <.icon name="hero-user-group-solid" />
+          <.icon name="hero-user-group-mini" />
           <span>Team</span>
         </.link>
       </div>
 
       <%= if @context_options do %>
-        <span class="mt-4 truncate text-sm font-semibold text-zinc-400">
+        <span class="mt-4 truncate text-sm font-medium text-zinc-400">
           <%= @title %>
         </span>
         <div
@@ -82,7 +82,7 @@
             |> JS.add_class("hidden", to: "#backdrop")
           }
         >
-          <.link :for={option <- @context_options} navigate={option.to}>
+          <.link :for={option <- @context_options} navigate={option.to} class="text-sm">
             <.icon name={option.icon} />
             <span><%= option.label %></span>
           </.link>
