--- a/lib/gits_web/controllers/error_html/500.html.heex
+++ b/lib/gits_web/controllers/error_html/500.html.heex
@@ -12,7 +12,6 @@
     <div class="flex h-screen items-center">
       <div class="flex grow flex-col justify-center gap-6 px-6 lg:px-8">
         <div>
-          <!-- <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a> -->
           <span class="text-7xl font-light">500</span>
         </div>
 
@@ -21,10 +20,7 @@
         </h2>
 
         <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
-          <.link
-            href={~p"/accounts/new"}
-            class="border-2 border-zinc-900 font-medium py-2 px-4 rounded-xl"
-          >
+          <.link href={~p"/"} class="border-2 border-zinc-900 font-medium py-2 px-4 rounded-xl">
             Go home
           </.link>
         </div>
