--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -3,28 +3,28 @@
     <.link navigate={~p"/my/tickets"} replace={true} class="flex rounded-lg hover:bg-zinc-100 p-2">
       <.icon name="hero-arrow-left-mini" />
     </.link>
-    <h1 class="font-semibold"><%= @instance.ticket_name %></h1>
+    <h1 class="font-semibold">Ticket</h1>
     <.link class="flex rounded-lg hover:bg-zinc-100 p-2">
       <!-- <.icon name="hero-ellipsis-horizontal-mini" /> -->
     </.link>
   </div>
-  <div>
+  <div :if={false}>
     <div class="grid items-center gap-0.5">
       <div class="mx-auto flex w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
         <div class="aspect-[4/5] h-20 rounded-lg bg-zinc-200 p-4"></div>
         <div class="grid gap-2">
           <h2 class="line-clamp-2 text-lg font-semibold">
-            <%= @instance.event_name %>
+            <%= @event.name %>
           </h2>
           <div class="flex justify-between text-zinc-500">
             <span class="flex items-center gap-1 text-xs">
               <.icon name="hero-calendar-days-micro" />
-              <%= @instance.event_starts_at |> Timex.format!("%e %b %Y", :strftime) %>
+              <%= @event.starts_at |> Timex.format!("%e %b %Y", :strftime) %>
             </span>
 
             <span class="flex items-center gap-1 text-xs">
               <.icon name="hero-clock-micro" />
-              <%= @instance.event_starts_at |> Timex.format!("%H:%M %p", :strftime) %>
+              <%= @event.starts_at |> Timex.format!("%H:%M %p", :strftime) %>
             </span>
           </div>
         </div>
@@ -32,7 +32,7 @@
       <div class="mx-auto flex grid w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
         <div class="size-64 mx-auto flex max-w-sm justify-center">
           <%= raw(
-            @instance.qr_code
+            "show up"
             |> EQRCode.encode()
             |> EQRCode.svg(
               viewbox: true,
