add keypair resource

--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -8,7 +8,7 @@
       <!-- <.icon name="hero-ellipsis-horizontal-mini" /> -->
     </.link>
   </div>
-  <div :if={false}>
+  <div>
     <div class="grid items-center gap-0.5">
       <div class="mx-auto flex w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
         <div class="aspect-[4/5] h-20 rounded-lg bg-zinc-200 p-4"></div>
