publishing also creates keypairs

--- a/lib/gits_web/controllers/error_html/503.html.heex
+++ b/lib/gits_web/controllers/error_html/503.html.heex
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>500 | Internal Server Error</title>
+    <title>503 | Service Unavailable</title>
     <link rel="stylesheet" href="/assets/app.css" />
     <script defer type="text/javascript" src="/assets/app.js">
     </script>
@@ -12,11 +12,11 @@
     <div class="flex h-screen items-center">
       <div class="flex grow flex-col justify-center gap-6 px-6 lg:px-8">
         <div>
-          <span class="text-7xl font-light">500</span>
+          <span class="text-7xl font-light">503</span>
         </div>
 
         <h2 class="text-xl font-medium tracking-tight text-gray-900">
-          Something broke. It's not you, it's us :(
+          We're not ready for your yet, refresh after a bit
         </h2>
 
         <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
