--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -32,7 +32,7 @@
       <div class="mx-auto flex grid w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
         <div class="size-64 mx-auto flex max-w-sm justify-center">
           <%= raw(
-            "show up"
+            @code
             |> EQRCode.encode()
             |> EQRCode.svg(
               viewbox: true,
