--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -32,11 +32,10 @@
       <div class="mx-auto flex grid w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
         <div class="size-64 mx-auto flex max-w-sm justify-center">
           <%= raw(
-            @code
+            @token
             |> EQRCode.encode()
             |> EQRCode.svg(
               viewbox: true,
-              shape: "circle",
               color: "#3f3f46",
               background_color: :transparent,
               width: 256
